crates/atlas-runtime/tests/snapshots/assignment_target_tests__assignment_expression_value.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    value:
      Binary:
        op: Add
        left:
          Literal:
            - Number: 1
            - start: 4
              end: 5
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 8
                  end: 9
            right:
              Literal:
                - Number: 3
                - start: 12
                  end: 13
            span:
              start: 8
              end: 13
        span:
          start: 4
          end: 13
    span:
      start: 0
      end: 14
