crates/atlas-runtime/tests/snapshots/assignment_target_tests__assignment_longer_name.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: myVariable
        span:
          start: 0
          end: 10
    value:
      Literal:
        - Number: 100
        - start: 13
          end: 16
    span:
      start: 0
      end: 17
